<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_jogarPergunta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@+id/textView_jogarResposta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_jogarResposta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/buttonExibirResposta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_jogarPergunta" />

    <Button
        android:id="@+id/buttonExibirResposta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/show_answer"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterQuestionsAnswers"
        app:layout_constraintEnd_toStartOf="@+id/buttonPular"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_jogarResposta" />

    <Button
        android:id="@+id/buttonPular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="@+id/buttonExibirResposta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonExibirResposta" />

    <Button
        android:id="@+id/buttonRegisterQuestionsAnswers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_answers_questions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>